data/derived/sp14/progs/unify/prog2919.ml.out
Characters 143-169:
  | Average(a,b) -> (((eval(a,x,y), eval(b,x,y))/2));;
                      ^^^^^^^^^^^^^^^^^^^^^^^^^^
Error: This expression has type 'a * 'b
       but an expression was expected of type int
